// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders label with text 1`] = `
.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

.c1 > .c0 {
  display: block;
  font-size: 0.875em;
  color: #eee;
}

<label
  className="c0 c1"
>
  label
</label>
`;

exports[`renders label without props 1`] = `
.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

.c1 > .c0 {
  display: block;
  font-size: 0.875em;
  color: #eee;
}

<label
  className="c0 c1"
/>
`;

exports[`renders nested label 1`] = `
.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
}

.c1 > .c0 {
  display: block;
  font-size: 0.875em;
  color: #eee;
}

.c2 > .c0 {
  display: block;
  font-size: 0.875em;
  color: #eee;
}

<label
  className="c0 c1"
>
  primary
  <label
    className="c0 c1"
  >
    secondary
  </label>
</label>
`;

exports[`renders secondary label 1`] = `
.c2 > .c0 {
  display: block;
  font-size: 0.875em;
  color: #eee;
}

.c1 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  display: block;
  font-size: 0.875em;
  color: #eee;
}

.c1 > .c0 {
  display: block;
  font-size: 0.875em;
  color: #eee;
}

<label
  className="c0 c1"
>
  secondary
</label>
`;
